@@ -8,6 +8,7 @@ mac getIpByName liefert name von IPnum
 opsi-winst/opsi-script (4.12.4.4) experimental; urgency=low
 
 * new boolean function: isValidFQDN
+* fix debug_lib do impotred libs added to nologfiles in oslog
 
 -- d.oertel <d.oertel@uib.de> Tue, 13 Oct 2020 15:00
 
